--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nexqueue",
   "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "Queue.js",
   "scripts": {
     "test": "echo \"No test specified, use example.js\""
   },
